# vik-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  openapi-simplified.json  pyproject.toml  server.py  test_auth.py  test_client.py
.github/workflows/: publish-docker.yml
References/: docs.json  mcp-best-practices.md
tests/: conftest.py  test_labels.py  test_projects.py  test_tasks.py
